--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'io.cucumber', name: 'cucumber-java', version: '4.8.0'
+    compile group: 'io.cucumber', name: 'cucumber-testng', version: '4.8.0'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-    compile group: 'org.testng', name: 'testng', version: '7.0.0'
+    compile group: 'de.monochromata.cucumber', name: 'reporting-plugin', version: '3.0.12'
 
 }
 
@@ -25,13 +26,15 @@ configurations {
     }
 }
 
+
 task cucumber() {
     dependsOn assemble, compileTestJava
     doLast {
         javaexec {
             main = "io.cucumber.core.cli.Main"
+            systemProperties = System.getProperties()
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
-            args = ['--plugin', 'pretty', '--glue', 'test.step_definitions', 'src/main/java/test/features/']
+            args = ['--plugin', 'pretty', '--plugin', "de.monochromata.cucumber.report.PrettyReports:target", '--glue', 'test.step_definitions', 'src/main/java/test/features/']
 
         }
     }
